@@ -1,3 +1,12 @@
+2009-11-12  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Avoid some potential GCC warnings.
+
+	* src/clistub.c: Include process.h for `execv' prototype...
+	(main): Cast `argv' to appropriately matched type when calling it.
+
+	* src/pkginfo/driver.c: Include stdlib.h for `free' prototype.
+
 2009-11-11  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Create diagnostic message handler for CLI usage.
